# TxtLungNoduleExtractor

./: .gitignore  CHANGELOG.md  CHECKPOINT_USAGE.md  DEPLOYMENT.md  GUI使用说明.txt  GUI进度显示说明.md  LICENSE  README.md  README_EN.md  build_gui.bat  config.py  config_loader.py  core.py  download_model.py  format_code.bat  gui.py  gui.spec  hook-conda-pack.py  hook-llama_cpp.py  installer.iss  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  test.xlsx  test_results3.xlsx  test_results4.xlsx  verify_setup.py  快速开始.txt  打包部署说明.txt
.kiro/specs/fix-packaging-issues/: design.md  requirements.md  tasks.md
_vcredist/: .gitkeep
docs/: DEPLOYMENT.md  README_EN.md
tests/: test_checkpoint.py  test_config_loader.py  test_extraction.py  test_preprocessing.py
training/: download_qwen_wholeHF.py  merge_lora.py  prepare_training_data.py  train_lora.py
